Add security features, UI improvements, and email notifications Backend: - Add CSRF protection with double-submit cookie pattern - Add JWT refresh tokens (15min access / 7-day refresh) - Add pagination to all API endpoints (users, hotels, audit, requests, factures) - Add date range filters on requests and factures - Add email notification service (nodemailer) - Notify managers on new requests - Notify employees on approval/rejection - Notify Relex on validated requests - Notify employees on confirmed reservations - Increase rate limit for development mode (100 vs 5 in prod) Frontend: - Refactor Auth context with automatic token refresh - Add axios interceptors for CSRF and 401 retry - Add ConfirmModal component (replaces window.confirm) - Add DateRangeFilter component - Add sortable columns to Table component - Add Tailwind CSS configuration - Update all pages with new filters and sorting - Improve UI/UX on Admin, Approvals, Finance, Relex pages

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,14 @@
 PORT=4000
 MONGO_URI=mongodb://mongo:27017/sonatrach_reservations
 JWT_SECRET=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING_MIN_32_CHARS
+REFRESH_SECRET=CHANGE_THIS_TO_A_DIFFERENT_SECURE_RANDOM_STRING
 CORS_ORIGIN=http://localhost:8080
+FRONTEND_URL=http://localhost:8080
+
+# SMTP Configuration (optional - emails will be logged in dev mode if not set)
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-email@example.com
+# SMTP_PASS=your-password
+# SMTP_FROM="StayFlow Sonatrach" <noreply@sonatrach.dz>
