--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "csv-stringify": "^6.5.2",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
@@ -24,6 +26,7 @@
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2"
   },
   "devDependencies": {
